# AresGame

./: README.md
AresGameInput/: CMakeLists.txt
AresGameInput/include/: Logger.h  TcpClient.h
AresGameInput/src/: Logger.cpp  TcpClient.cpp  ares_game.cpp
AresUnityDemo/: AresUnityDemo.sln  Assembly-CSharp.csproj  Unity.CollabProxy.Editor.csproj  Unity.EditorCoroutines.Editor.csproj  Unity.Performance.Profile-Analyzer.Editor.csproj  Unity.PlasticSCM.Editor.csproj  Unity.Rider.Editor.csproj  Unity.Settings.Editor.csproj  Unity.TestTools.CodeCoverage.Editor.OpenCover.Model.csproj  Unity.TestTools.CodeCoverage.Editor.OpenCover.Mono.Reflection.csproj  Unity.TestTools.CodeCoverage.Editor.csproj  Unity.TextMeshPro.Editor.csproj  Unity.TextMeshPro.csproj  Unity.Timeline.Editor.csproj  Unity.Timeline.csproj  Unity.VSCode.Editor.csproj  Unity.VisualScripting.Core.Editor.csproj  Unity.VisualScripting.Core.csproj  Unity.VisualScripting.Flow.Editor.csproj  Unity.VisualScripting.Flow.csproj  Unity.VisualScripting.SettingsProvider.Editor.csproj  Unity.VisualScripting.Shared.Editor.csproj  Unity.VisualScripting.State.Editor.csproj  Unity.VisualScripting.State.csproj  Unity.VisualStudio.Editor.csproj  UnityEditor.TestRunner.csproj  UnityEditor.UI.csproj  UnityEngine.TestRunner.csproj  UnityEngine.UI.csproj
AresUnityDemo/Assets/: New Terrain.asset  NewLayer.terrainlayer
AresUnityDemo/Assets/Materials/: DarkMetal.mat  Metal041A_2K_Color.mat  Pink.mat  Target_Default.mat
AresUnityDemo/Assets/Scripts/: Game.cs  (+7 more)
AresUnityDemo/ProjectSettings/: ProjectSettings.asset  TagManager.asset
(+16 files in other folders)
